--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dare.me/grunt-i18n-static",
-  "version": "0.1.16",
+  "version": "0.1.17",
   "description": "Task to translate static html",
   "main": "index.js",
   "private": false,
@@ -30,7 +30,7 @@
   },
   "homepage": "https://github.com/dare-me/grunt-i18n-static",
   "dependencies": {
-    "lodash": "^4.17.21",
-    "@dare.me/static-i18n": "^0.2.10"
+    "@dare.me/static-i18n": "^0.2.10",
+    "lodash": "^4.17.21"
   }
 }
