Translate coffeescript to javascript

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "internationalization"
   ],
   "files": [
-    "./tasks/static-i18n.coffee",
+    "tasks/static-i18n.js",
     "./LICENSE",
     "./README.md",
     "./yarn.lock",
